Update vaadin-upload-flow-parent/vaadin-upload-flow/src/main/java/com/vaadin/flow/component/upload/Upload.java
Co-authored-by: Diego Cardoso <diego@vaadin.com>